--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,49 @@
     --color-white: #fff;
 
     --font-inter:"Inter", sans-serif;
+    /*UTOPIA НАЧАЛО*/
+    --step--2: clamp(0.78rem, calc(0.78rem + 0.03vw), 0.80rem); /*0.03vw (vw-это ширина текста на экране)*/
+    --step--1: clamp(0.94rem, calc(0.92rem + 0.09vw), 1.00rem);
+    --step-0: clamp(1.13rem, calc(1.09rem + 0.17vw), 1.25rem);
+    --step-1: clamp(1.35rem, calc(1.29rem + 0.29vw), 1.56rem);
+    --step-2: clamp(1.62rem, calc(1.53rem + 0.46vw), 1.95rem);
+    --step-3: clamp(1.94rem, calc(1.81rem + 0.69vw), 2.44rem);
+    --step-4: clamp(2.33rem, calc(2.13rem + 0.99vw), 3.05rem);
+    --step-5: clamp(2.80rem, calc(2.52rem + 1.40vw), 3.82rem);
+
+    --space-3xs: clamp(0.31rem, calc(0.31rem + 0.00vw), 0.31rem);
+    --space-2xs: clamp(0.56rem, calc(0.55rem + 0.09vw), 0.63rem);
+    --space-xs: clamp(0.88rem, calc(0.86rem + 0.09vw), 0.94rem);
+    --space-s: clamp(1.13rem, calc(1.09rem + 0.17vw), 1.25rem);
+    --space-m: clamp(1.69rem, calc(1.64rem + 0.26vw), 1.88rem);
+    --space-l: clamp(2.25rem, calc(2.18rem + 0.34vw), 2.50rem);
+    --space-xl: clamp(3.38rem, calc(3.27rem + 0.52vw), 3.75rem);
+    --space-2xl: clamp(4.50rem, calc(4.36rem + 0.69vw), 5.00rem);
+    --space-3xl: clamp(6.75rem, calc(6.54rem + 1.03vw), 7.50rem);
+
+  /* One-up pairs */
+    --space-3xs-2xs: clamp(0.31rem, calc(0.23rem + 0.43vw), 0.63rem);
+    --space-2xs-xs: clamp(0.56rem, calc(0.46rem + 0.52vw), 0.94rem);
+    --space-xs-s: clamp(0.88rem, calc(0.77rem + 0.52vw), 1.25rem);
+    --space-s-m: clamp(1.13rem, calc(0.92rem + 1.03vw), 1.88rem);
+    --space-m-l: clamp(1.69rem, calc(1.46rem + 1.12vw), 2.50rem);
+    --space-l-xl: clamp(2.25rem, calc(1.84rem + 2.07vw), 3.75rem);
+    --space-xl-2xl: clamp(3.38rem, calc(2.93rem + 2.24vw), 5.00rem);
+    --space-2xl-3xl: clamp(4.50rem, calc(3.67rem + 4.14vw), 7.50rem);
+
+  /* Custom pairs */
+    --space-s-l: clamp(1.13rem, calc(0.75rem + 1.90vw), 2.50rem);
+
+    --grid-max-width: 77.50rem;
+    --grid-gutter: var(--space-s-l, clamp(1.13rem, calc(0.65rem + 2.39vw), 2.50rem));
+    --grid-columns: 12;
+    /*UTOPIA КОНЕЦ*/
 }
+
+    /*------------------------------------*\
+    #SECTION-GLOBAL
+    \*------------------------------------*/
+
 
     /*перднастройки НАЧАЛО*/
 html{
@@ -24,7 +66,7 @@ html{
 
 body {
     font-family:var(--font-inter);
-    font-size:1.125rem; /*alt+z-это перевод "px" в "rem" */
+    font-size:100%; /*alt+z-это перевод "px" в "rem" */
     line-height:1.5em;
 }
 
@@ -49,8 +91,55 @@ img {
     text-decoration: none;
     color: inherit;
     }
-    /*перднастройки КОНЕЦ*/
+    /*UTOPIA НАЧАЛО*/
+    .u-container {
+    max-width: var(--grid-max-width);
+    padding-inline: var(--grid-gutter);
+    margin-inline: auto;
+    }
+    
+    .u-grid {
+    display: grid;
+    gap: var(--grid-gutter);
+    }
+    /*UTOPIA КОНЕЦ*/
+    /*пред настройки КОНЕЦ*/
     
     /*------------------------------------*\
-    #SECTION-GLOBAL
+    #SECTION
     \*------------------------------------*/
+
+    .header {
+    width: 100%;
+    height: 90px;
+    }
+
+    .header__flex {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .header__logo {
+    width:100px;
+    }
+
+    .header__nav {
+    width:100px;
+    }
+
+    .header__button {
+    width:100px;
+    }
+
+    /*модификатор*/
+    .header--blue {
+    background-color: var(--color-blue);
+    }
+
+    .nav {
+    display: flex;
+    }
+
+    .top__button {
+    display: flex;
+    }
