--- a/css/styles.css
+++ b/css/styles.css
@@ -169,8 +169,8 @@ img {
 
     .btn {
     display: block;
-    padding: 1rem 2.5rem;
-    font: 400 var(--step--0)/1.5em var(--font-inter); /*сокращение: жирность шрифта,размер шрифта,/межстрочное расстояние,ШРИФТ какой он будет */
+    padding: 1rem 1.5rem;
+    font: 400 var(--step--1)/1.5em var(--font-inter); /*сокращение: жирность шрифта,размер шрифта,/межстрочное расстояние,ШРИФТ какой он будет */
     border-radius:0.5rem;
     transition: 0.5s;
     }
@@ -239,7 +239,7 @@ img {
             top: var(--height-header);
             display:none;
             background-color: var(--color-blue);
-            padding: 20px 10px;
+            padding: 1.25rem 0.625rem;
             flex-direction: column; /*превратить блоки в колонки*/
             gap: 20px;
         }
@@ -264,4 +264,27 @@ img {
             }
         
     }
-    
+/*--------------------------------*\ 
+        #SECTION-ARTICLE
+\*--------------------------------*/ 
+
+.article{
+    width: 100%;
+    padding-block:140px; /*-block -это отступ сверху и снизу*/
+}
+
+.article--blue {     /*модификатор*/
+background-color:var(--color-blue);
+}
+
+.article--background {
+    background-image: url('../images/svg/waves-1.svg');
+}
+
+.article__box {
+
+}
+
+.article__text, .article__img {
+width: 50%;
+}
